--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
-{% block content %}
-    <h1>File Not Found!</h1>
-    <p><a href="{{ url_for('index') }}">Back</a></p>
+{% block app_content %}
+    <h1>{{ _('File Not Found') }}</h1> <!--_()函数为翻译函数-->
+    <p><a href="{{ url_for('index') }}">{{ _('Back') }}</a></p>
 {% endblock %}
