--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,28 +1,29 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
-{% block content %}
-    <h1>Hi, {{ current_user.username }}!</h1>
-    {% if form %}<!--当表单参数存在时才显示-->
-        <form action="" method="post">
-            {{ form.hidden_tag() }}
-            <p>
-                {{ form.post.label }}<br>
-                {{ form.post(cols=32, rows=4) }}<br>
-                {% for error in form.post.errors %}
-                    <span style="color: red;">[{{ error }}]</span>
-                {% endfor %}
-            </p>
-            <p>{{ form.submit() }}</p>
-        </form>
+{% block app_content %}
+    {% if form %} {# 显示发布新的博客的输入框 #}
+        <p style="font-family: 幼圆;font-size:xx-large;font-weight: bolder">
+            {{ _("What's new to tell everyone?") }}
+        </p>
+        {{ wtf.quick_form(form) }}
+        <br>
     {% endif %}
-    {% for post in posts %}
-        {#<div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>#}
+    {% for post in posts %} {# 显示博客 #}
         {% include '_post.html' %}
     {% endfor %}
-    {% if prev_url %}
-        <a href="{{ prev_url }}">Newer posts</a>
-    {% endif %}
-    {% if next_url %}
-        <a href="{{ next_url }}">Older posts</a>
-    {% endif %}
+    <nav aria-label="...">
+        <ul class="pager">
+            <li class="previous{% if not prev_url %} disabled{% endif %}">
+                <a href="{{ prev_url or '#' }}">
+                    <span aria-hidden="true">&larr;</span> {{ _('Newer posts') }}
+                </a>
+            </li>
+            <li class="next{% if not next_url %} disabled{% endif %}">
+                <a href="{{ next_url or '#' }}">
+                    {{ _('Older posts') }} <span aria-hidden="true">&rarr;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 {% endblock %}
