--- a/app/templates/email/reset_password.html
+++ b/app/templates/email/reset_password.html
@@ -1,12 +1,14 @@
 <p>Dear {{ user.username }},</p>
 <p>
     To reset your password
-    <a href="{{ url_for('reset_password', token=token, _external=True) }}">click here</a>.
+    <a href="{{ url_for('auth.reset_password', token=token, _external=True) }}">
+        click here
+    </a>.
     <!--_external=True参数，函数生成的是相对路径-->
     <!--例如url_for('user', username='susan')生成/user/susan-->
 </p>
 <p>Alternatively, you can paste the following link in your browser's address bar:</p>
-<p>{{ url_for('reset_password', token=token, _external=True) }}</p>
+<p>{{ url_for('auth.reset_password', token=token, _external=True) }}</p>
 <p>If you have not requested a password reset simply ignore this message.</p>
 <p>Sincerely,</p>
 <p>The Microblog Team</p>
