第二十章，当你看到用户名时，只需将鼠标指针放在上面几秒钟即可看到弹出窗口。

--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -11,9 +11,11 @@
         </td>
         <td>
             {% set user_link %} {# 类似定义了一个变量 #}
-            <a href="{{ url_for('main.user', username=post.author.username) }}">
-                {{ post.author.username }}
-            </a>
+                <span class="user_popup">
+                    <a href="{{ url_for('main.user', username=post.author.username) }}">
+                        {{ post.author.username }}
+                    </a>
+                </span>
             {% endset %}
             {#fromNow()显示该博客发布到现在的时间#}
             {{ _('%(username)s said %(when)s', username=user_link, when=moment(post.timestamp).fromNow()) }}
